--- a/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
+++ b/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
@@ -23,15 +23,24 @@
         </div>
       </td>
     </ng-container>
-    <ng-container matColumnDef="editarEliminar">
+    <ng-container
+      matColumnDef="editarEliminar"
+      *ngIf="sesion$ | async as sesion"
+    >
       <th mat-header-cell *matHeaderCellDef class="title">Acciones</th>
       <td mat-cell *matCellDef="let element; let i = index">
-        <button mat-icon-button color="primary" (click)="modalEdit(element)">
+        <button
+          mat-icon-button
+          color="primary"
+          *ngIf="sesion.usuarioActivo?.esAdmin"
+          (click)="modalEdit(element)"
+        >
           <mat-icon>edit</mat-icon>
         </button>
         <button
           mat-icon-button
           color="warn"
+          *ngIf="sesion.usuarioActivo?.esAdmin"
           (click)="eliminarUsuario(i, element.id)"
         >
           <mat-icon>delete</mat-icon>
