--- a/src/app/core/components/main-wrapper/menu/menu.component.html
+++ b/src/app/core/components/main-wrapper/menu/menu.component.html
@@ -5,6 +5,6 @@
       <li routerLink="alumnos" (click)="changeWrapper('alumnos')">Alumnos</li>
       <li routerLink="cursos" (click)="changeWrapper('cursos')">Cursos</li>
       <li routerLink="profesores" (click)="changeWrapper('profesores')">Profesores</li>
-      <li routerLink="auth" (click)="changeWrapper('auth')">Autenticacion</li>
+      <li (click)="logout()">Logout</li>
   </ul>
 </section>
