--- a/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
+++ b/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
@@ -41,7 +41,7 @@
           mat-icon-button
           color="warn"
           *ngIf="sesion.usuarioActivo?.esAdmin"
-          (click)="eliminarUsuario(i, element.id)"
+          (click)="eliminarUsuario(element)"
         >
           <mat-icon>delete</mat-icon>
         </button>
