--- a/src/app/cursos/components/cursos-wrapper/lista-cursos/lista-cursos.component.html
+++ b/src/app/cursos/components/cursos-wrapper/lista-cursos/lista-cursos.component.html
@@ -11,7 +11,7 @@
       </ng-container>
       <ng-container matColumnDef="profesor">
         <th mat-header-cell *matHeaderCellDef class="title">Profesor</th>
-        <td mat-cell *matCellDef="let element">{{ element.profesor.nombre }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.profesor?.nombre }}</td>
       </ng-container>
       <ng-container matColumnDef="comienzo">
         <th mat-header-cell *matHeaderCellDef class="title">Comienzo</th>
