--- a/src/app/alumnos/components/alumnos-wrapper/edit-alumno/edit-alumno.component.html
+++ b/src/app/alumnos/components/alumnos-wrapper/edit-alumno/edit-alumno.component.html
@@ -35,7 +35,9 @@
         class="form-check-input"
         id="estado"
       />
-      <label class="form-check-label" for="estado">Seleccione para activar alumno</label>
+      <label class="form-check-label" for="estado"
+        >Seleccione para activar alumno</label
+      >
     </div>
   </form>
 </div>
