--- a/src/app/cursos/components/cursos-wrapper/cursos-wrapper.component.html
+++ b/src/app/cursos/components/cursos-wrapper/cursos-wrapper.component.html
@@ -1,3 +1,4 @@
 <section>
-    <app-lista-cursos></app-lista-cursos>
+  <app-lista-cursos></app-lista-cursos>
+  <router-outlet></router-outlet>
 </section>
