--- a/src/app/alumnos/components/alumnos-wrapper/add-alumnos/add-alumnos.component.html
+++ b/src/app/alumnos/components/alumnos-wrapper/add-alumnos/add-alumnos.component.html
@@ -44,7 +44,7 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cerrar</button>
-  <button mat-button [mat-dialog-close]="data" (click)="addAlumno()">
+  <button id="btnAgregar" mat-button [mat-dialog-close]="data" (click)="addAlumno()">
     Agregar
   </button>
 </div>
