--- a/src/app/cursos/components/cursos-wrapper/lista-cursos/lista-cursos.component.html
+++ b/src/app/cursos/components/cursos-wrapper/lista-cursos/lista-cursos.component.html
@@ -34,7 +34,7 @@
         <button
           mat-icon-button
           color="warn"
-          (click)="eliminarCurso(i, element.id)"
+          (click)="eliminarCurso(element)"
         >
           <mat-icon>delete</mat-icon>
         </button>
