--- a/src/app/autenticacion/components/autenticacion-inicio/autenticacion-inicio.component.html
+++ b/src/app/autenticacion/components/autenticacion-inicio/autenticacion-inicio.component.html
@@ -1,3 +1,3 @@
-<p>autenticacion-inicio works!</p>
-<button mat-button class="button-login" routerLink="login">Login</button>
-<router-outlet></router-outlet>
+<!-- <p>autenticacion-inicio works!</p>
+<button mat-button class="button-login" routerLink="login">Login</button> -->
+<router-outlet class="main-wrapper"></router-outlet>
