--- a/src/app/autenticacion/components/login/login.component.html
+++ b/src/app/autenticacion/components/login/login.component.html
@@ -1,21 +1,23 @@
-<h1>Iniciar Sesión</h1>
-<form [formGroup]="formulario">
+<div class="contenedor">
+  <h1>Iniciar Sesión</h1>
+  <form [formGroup]="formulario">
     <div class="col-md-4">
-        <mat-form-field appearance="fill">
-            <mat-label>Usuario</mat-label>
-            <input matInput type="text" formControlName="usuario">
-        </mat-form-field>
+      <mat-form-field >
+        <mat-label>Usuario</mat-label>
+        <input matInput type="text" formControlName="usuario" />
+      </mat-form-field>
     </div>
     <div class="col-md-4">
-        <mat-form-field appearance="fill">
-            <mat-label>Contraseña</mat-label>
-            <input matInput type="text" formControlName="contrasena">
-        </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Contraseña</mat-label>
+        <input matInput type="text" formControlName="contrasena" />
+      </mat-form-field>
     </div>
     <div class="col-md-2">
-        <mat-slide-toggle  formControlName="esAdmin">es admin</mat-slide-toggle>
+      <mat-slide-toggle formControlName="esAdmin">es admin</mat-slide-toggle>
     </div>
     <div class="col-md-2">
-        <button mat-raised-button color="primary" (click)="login()">Login</button>
+      <button mat-raised-button color="primary" (click)="login()">Login</button>
     </div>
-</form>
+  </form>
+</div>
