--- a/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
+++ b/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
@@ -25,14 +25,13 @@
     </ng-container>
     <ng-container
       matColumnDef="editarEliminar"
-      *ngIf="sesion$ | async as sesion"
     >
       <th mat-header-cell *matHeaderCellDef class="title">Acciones</th>
       <td mat-cell *matCellDef="let element; let i = index">
         <button
           mat-icon-button
           color="primary"
-          *ngIf="sesion.usuarioActivo?.esAdmin"
+          *ngIf="usuarioAdmin$ | async"
           (click)="modalEdit(element)"
         >
           <mat-icon>edit</mat-icon>
@@ -40,7 +39,7 @@
         <button
           mat-icon-button
           color="warn"
-          *ngIf="sesion.usuarioActivo?.esAdmin"
+          *ngIf="usuarioAdmin$ | async"
           (click)="eliminarUsuario(element)"
         >
           <mat-icon>delete</mat-icon>
