--- a/src/app/autenticacion/components/autenticacion-inicio/autenticacion-inicio.component.scss
+++ b/src/app/autenticacion/components/autenticacion-inicio/autenticacion-inicio.component.scss
@@ -1,5 +1,6 @@
 .main-wrapper{
     display: flex;
-    max-height: 100vh;
-    width: 100vw;
+    margin: 20px;
+    align-items: center;
+    justify-content: center;
 }
