--- a/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
+++ b/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
@@ -23,9 +23,7 @@
         </div>
       </td>
     </ng-container>
-    <ng-container
-      matColumnDef="editarEliminar"
-    >
+    <ng-container matColumnDef="editarEliminar">
       <th mat-header-cell *matHeaderCellDef class="title">Acciones</th>
       <td mat-cell *matCellDef="let element; let i = index">
         <button
