--- a/src/app/cursos/components/cursos-wrapper/lista-cursos/lista-cursos.component.html
+++ b/src/app/cursos/components/cursos-wrapper/lista-cursos/lista-cursos.component.html
@@ -28,11 +28,17 @@
     <ng-container matColumnDef="editarEliminar">
       <th mat-header-cell *matHeaderCellDef class="title">Acciones</th>
       <td mat-cell *matCellDef="let element; let i = index">
-        <button mat-icon-button color="primary" (click)="modalEdit(element)">
+        <button
+          mat-icon-button
+          color="primary"
+          *ngIf="usuarioAdmin$ | async"
+          (click)="modalEdit(element)"
+        >
           <mat-icon>edit</mat-icon>
         </button>
         <button
           mat-icon-button
+          *ngIf="usuarioAdmin$ | async"
           color="warn"
           (click)="eliminarCurso(element)"
         >
