--- a/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
+++ b/src/app/alumnos/components/alumnos-wrapper/lista-alumnos/lista-alumnos.component.html
@@ -1,8 +1,8 @@
 <section class="main">
-  <button mat-raised-button color="primary" (click)="AgregarAlumno()">
+  <button mat-raised-button class="button" color="primary" (click)="AgregarAlumno()">
     Agregar Alumno
   </button>
-  <table mat-table [dataSource]="dataSource">
+  <table class="table" mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="nombreYApellido">
       <th mat-header-cell *matHeaderCellDef class="title">Nombre Y Apellido</th>
       <td mat-cell *matCellDef="let element">
