--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,12 +8,15 @@
       min-height: 95vh;
       min-width: 10rem;
       width: 10vw;
-      background: #212121;
+      background: #82887e;
     }
     .main {
       min-height: 95vh;
       width: 90vw;
       padding: 5px;
+    }
+    .toolbar{
+      background: #70766c;
     }
   }
   
