--- a/src/app/autenticacion/components/login/login.component.scss
+++ b/src/app/autenticacion/components/login/login.component.scss
@@ -2,7 +2,10 @@
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #70766c;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   }
@@ -16,24 +19,3 @@
     display: block;
     margin-bottom: 5px;
   }
-  
-//   input[type="text"],
-//   input[type="password"] {
-//     width: 100%;
-//     padding: 10px;
-//     margin-bottom: 20px;
-//     border-radius: 5px;
-//     border: 1px solid #ccc;
-//   }
-  
-//   button[type="submit"] {
-//     display: block;
-//     margin: 0 auto;
-//     padding: 10px 20px;
-//     background-color: #4CAF50;
-//     color: #fff;
-//     border: none;
-//     border-radius: 5px;
-//     font-size: 16px;
-//     cursor: pointer;
-//   }
