--- a/src/app/cursos/components/cursos-wrapper/lista-cursos/lista-cursos.component.html
+++ b/src/app/cursos/components/cursos-wrapper/lista-cursos/lista-cursos.component.html
@@ -1,8 +1,14 @@
 <section class="main">
-  <!-- <button mat-raised-button color="primary" (click)="AgregarCurso()">
-      Agregar Alumno
-    </button> -->
-  <table mat-table [dataSource]="dataSource">
+  <button
+    mat-raised-button
+    class="button"
+    color="primary"
+    *ngIf="usuarioAdmin$ | async"
+    (click)="AgregarCurso()"
+  >
+    Agregar Curso
+  </button>
+  <table class="table" mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef class="title">Curso</th>
       <td mat-cell *matCellDef="let element">
