--- a/src/app/inscripciones/components/inscripciones-wrapper/add-inscripcion/add-inscripcion.component.scss
+++ b/src/app/inscripciones/components/inscripciones-wrapper/add-inscripcion/add-inscripcion.component.scss
@@ -11,7 +11,7 @@
     }
     &.disabled{
         cursor: default;
-        background-color: gray;
+        background-color: #70766c;
         box-shadow: none;
     }
   }
