--- a/src/app/inscripciones/components/inscripciones-wrapper/lista-inscripciones/lista-inscripciones.component.html
+++ b/src/app/inscripciones/components/inscripciones-wrapper/lista-inscripciones/lista-inscripciones.component.html
@@ -1,7 +1,7 @@
-<button mat-raised-button color="primary"routerLink="add">Inscripciones</button>
+<button mat-raised-button class="button" color="primary"routerLink="add">Inscripciones</button>
 
 <section class="main">
-    <table mat-table [dataSource]="dataSource">
+    <table class="table" mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef class="title">ID</th>
         <td mat-cell *matCellDef="let element">
