--- a/src/app/usuarios/components/usuarios-wrapper/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/usuarios/components/usuarios-wrapper/lista-usuarios/lista-usuarios.component.html
@@ -1,8 +1,8 @@
 <section class="main">
-    <button mat-raised-button color="primary" (click)="AgregarUsuario()">
+    <button class="button" mat-raised-button color="primary" (click)="AgregarUsuario()">
       Agregar Usuario
     </button>
-    <table mat-table [dataSource]="dataSource">
+    <table class="table" mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="nombreYApellido">
         <th mat-header-cell *matHeaderCellDef class="title">Nombre Y Apellido</th>
         <td mat-cell *matCellDef="let element">
